# stock-signal

./: Dockerfile  docker-compose.yml  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: alpaca.rs  bronze.rs  commands.rs  gold.rs  kafka.rs  lib.rs  main.rs  neo4j.rs  pipeline.rs  silver.rs  trino.rs
src/hooks/: useStockStream.ts
src/types/: stock.ts
trino/catalog/: iceberg.properties
